--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,19 @@
-.App {
-  text-align: center;
+.app-main{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    column-gap: 1.5rem;
+    row-gap: 1.5rem;
+    padding: 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+@media only screen and (max-width: 480px){
+    .app-main{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        column-gap: 1rem;
+        row-gap: 1.5rem;
+        padding: 2rem;
+    }
 }
